# Muehle

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  MuehleWin.sln  MuehleWin.vcxproj  MuehleWin.vcxproj.filters  README.md  install database.bat  settings.xml  vcpkg.json
sourcecode/: MuehleWin.cpp  MuehleWin.h  MuehleWin.rc  console.cpp  millField2D.cpp  millField2D.h  minMaxKI.h  perfectKI.h  resource.h
src/DatabaseTransformer/: CMakeLists.txt  miniMaxDatabaseTransformer.cpp
src/Muehle/: CMakeLists.txt  fieldStruct.cpp  fieldStruct.h  muehle.cpp  muehle.h  readme.md
src/Muehle/ai/: minMaxAI.cpp  minMaxAI.h  perfectAI.cpp  perfectAI.h  randomAI.cpp  randomAI.h  stateAddressing.cpp  stateAddressing.h  threadSpecific.cpp  threadSpecific.h
src/Muehle/cmd/: MuehleCmd.cpp  MuehleCmd.h
src/Muehle/gui/: MuehleWin.cpp  MuehleWin.h  MuehleWin.rc  functionCalls.drawio  historyList.cpp  historyList.h  millField2D.cpp  millField2D.h  playGameStates.drawio  resource.h
src/TicTacToe/: CMakeLists.txt  main.cpp  ticTacToe.cpp  ticTacToe.h
tst/MuehleTest/: CMakeLists.txt  MuehleTest.cpp  fieldStructTest.cpp  minMaxAITest.cpp  perfectAITest.cpp  stateAddressingTest.cpp  threadSpecificTest.cpp
tst/TicTacToeTest/: CMakeLists.txt  TicTacToeTest.cpp
